[tool.poetry]
name = "cave_bot"
version = "0.1.0"
description = "discord bot for building map on chat reports"
authors = ["Shuraken007 <alexander.mad93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3.2"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
sqlalchemy = "^2.0.30"
pytest = "^8.2.0"
psycopg2 = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
pytest-xdist = "^3.6.1"

[tool.poetry.scripts]
start = "python3 -m src.scripts.main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]